tests/baselines/reference/defaultValueInConstructorOverload1.errors.txt
==== tests/cases/compiler/defaultValueInConstructorOverload1.ts (1 errors) ====
    class C {
        constructor(x = '');
                    ~~~~~~
!!! defaultValueInConstructorOverload1.ts(2,17): error TS2174: A parameter initializer is only allowed in a function or constructor implementation.
        constructor(x = '') {
        }
    }